# cmtool

./: .gitignore  LICENSE  README.md  README.zh.md  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
src/: App.tsx  index.css  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  model_download.rs
src/pages/ClaudeUsage/: ClaudeUsage.tsx
src/pages/Dashboard/: Dashboard.tsx
src/pages/ModelDownloader/: ModelDownloader.tsx
src/pages/Settings/: Settings.tsx
src/services/claudeUsage/: index.ts  parser.ts  pricing.ts  scanner.ts  types.ts
src/services/modelDownload/: downloader.ts  huggingface.ts  index.ts  modelscope.ts  types.ts
src/storage/: config.ts  history.ts
src/utils/: format.ts
tests/: claudeUsage.test.ts  modelDownload.test.ts
