[package]
name = "cmtool"
version = "1.0.0"
description = "Desktop tool for model downloading and Claude usage statistics"
authors = ["cmtool"]
license = "MIT"
edition = "2021"
rust-version = "1.77.0"

[lib]
name = "cmtool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"] }
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.11", features = ["v4"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "unwind"
strip = "symbols"
